@@ -1,6 +1,7 @@
 // all resource indices, used by rxvt.h and rxvtperl.xs
 
  def(loginShell)
+ def(multiClickTime)
  def(iconic)
  def(visualBell)
  def(mapAlert)
